# Wyvern

./: .gitignore  CMakeLists.txt  build64.bat
Wyvern/: CMakeLists.txt
Wyvern/contrib/lib/x64/: glfw3.lib
Wyvern/contrib/lib/x86/: glfw3.lib
Wyvern/src/: WyvObject.cpp  WyvObject.h  WyvWindow.cpp  WyvWindow.h  Wyvern.cpp  Wyvern.h
src/: main.cpp
